--- a/charts/temporal/values.yaml
+++ b/charts/temporal/values.yaml
@@ -128,7 +128,7 @@ server:
       additionalStores: {}
 
       default:
-        driver: "cassandra"
+        driver: "sql"
 
         cassandra:
           hosts: []
@@ -150,9 +150,9 @@ server:
           driver: "mysql"
           host: "mysql"
           port: 3306
-          database: "temporal"
-          user: "temporal"
-          password: "temporal"
+          database: "root"
+          user: "root"
+          password: "T5CxNXKEEn"
           existingSecret: ""
           secretName: ""
           maxConns: 20
@@ -161,7 +161,7 @@ server:
           # tx_isolation: 'READ-COMMITTED'
 
       visibility:
-        driver: "cassandra"
+        driver: "sql"
 
         cassandra:
           hosts: []
@@ -184,8 +184,8 @@ server:
           host: "mysql"
           port: 3306
           database: "temporal_visibility"
-          user: "temporal"
-          password: "temporal"
+          user: "root"
+          password: "T5CxNXKEEn"
           existingSecret: ""
           secretName: ""
           maxConns: 20
@@ -464,7 +464,7 @@ grafana:
         datasource: TemporalMetrics
 
 cassandra:
-  enabled: true
+  enabled: false
   persistence:
     enabled: false
   image:
@@ -483,4 +483,4 @@ cassandra:
     type: ClusterIP
 
 mysql:
-  enabled: false
+  enabled: true
