--- a/charts/temporal/templates/admintools-deployment.yaml
+++ b/charts/temporal/templates/admintools-deployment.yaml
@@ -37,6 +37,8 @@ spec:
       {{- end }}
     spec:
       {{ include "temporal.serviceAccount" . }}
+      imagePullSecrets:
+        - name: image-registry
       containers:
         - name: admin-tools
           image: "{{ .Values.admintools.image.repository }}:{{ .Values.admintools.image.tag }}"
