--- a/charts/temporal/templates/server-job.yaml
+++ b/charts/temporal/templates/server-job.yaml
@@ -38,11 +38,13 @@ spec:
     spec:
       {{ include "temporal.serviceAccount" . }}
       restartPolicy: "OnFailure"
+      imagePullSecrets:
+        - name: image-registry
       initContainers:
         {{- if or .Values.cassandra.enabled (eq (include "temporal.persistence.driver" (list $ "default")) "cassandra") (eq (include "temporal.persistence.driver" (list $ "visibility")) "cassandra") }}
         {{- if .Values.cassandra.enabled }}
         - name: check-cassandra-service
-          image: registry-int.rz.bankenit.de/impulsmg/busybox
+          image: registry-int.rz.bankenit.de/impulsmanager/busybox
           command: ['sh', '-c', 'until nslookup {{ include "cassandra.host" $ }}; do echo waiting for cassandra service; sleep 1; done;']
         - name: check-cassandra
           image: "{{ .Values.cassandra.image.repo }}:{{ .Values.cassandra.image.tag }}"
@@ -243,7 +245,7 @@ spec:
       initContainers:
         {{- if .Values.cassandra.enabled }}
         - name: check-cassandra-service
-          image: registry-int.rz.bankenit.de/impulsmg/busybox
+          image: registry-int.rz.bankenit.de/impulsmanager/busybox
           command: ['sh', '-c', 'until nslookup {{ include "cassandra.host" $ }}; do echo waiting for cassandra service; sleep 1; done;']
         - name: check-cassandra
           image: "{{ .Values.cassandra.image.repo }}:{{ .Values.cassandra.image.tag }}"
